set signin/up page static

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,7 +42,7 @@
     <div class="login-button" onclick="login()">
       <button class="login-btn clickable">login</button>
     </div>
-    <div class="signup">don't have an accoun yet ?? <a href="#">signup</a></div>
+    <div class="signup">don't have an accoun yet ?? <a href="/user/signup">signup</a></div>
   </div>
 </body>
 <script src="javascripts/main.js"></script>
