--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>signup</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/signup.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../public/stylesheets/signup.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -75,7 +75,7 @@
       <div class="signup-button">
         <button class="signup-btn clickable">signup</button>
       </div>
-      <div class="login">already have an acount ?? <a href="#">login</a></div>
+      <div class="login">already have an acount ?? <a href="/user/login">login</a></div>
     </div>
   </body>
   <script src="javascripts/main.js"></script>
