--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -11,7 +11,7 @@ html {
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    background-image: url("background.jpg");
+    background-image: url("../images/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
