--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div class="signup-logo">SIGNUP</div>
-      <div class="inputs">
+      <div action="" method="POST" class="inputs">
         <div class="static-parts">
           <div class="group-name form-part">
             <div class="input-icon">
