--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,14 +16,14 @@
   </div>
   <div class="container">
     <div class="login-logo">login</div>
-    <div class="inputs">
+    <div method="POST" action="/user/login" class="inputs">
       <div class="static-parts">
         <div class="group-name form-part">
           <div class="input-icon">
             <i class="fa fa-users fa-2x" aria-hidden="true"></i>
           </div>
           <div class="input-part">
-            <input type="text" class="group-name-input" placeholder="group name" />
+            <input name="username" type="text" class="group-name-input" placeholder="group name" />
           </div>
         </div>
         <div class="password form-part">
@@ -31,7 +31,7 @@
             <i class="fa fa-unlock-alt fa-2x" aria-hidden="true"></i>
           </div>
           <div class="input-part">
-            <input type="password" class="password-input" placeholder="password" />
+            <input name="password" type="password" class="password-input" placeholder="password" />
           </div>
           <div class="input-icon eye-icon clickable" onclick="togglePass()">
             <i class="fa fa-eye" aria-hidden="true"></i>
