--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div class="signup-logo">SIGNUP</div>
-      <div action="" method="POST" class="inputs">
+      <form method="POST" action="/user/signup" class="inputs">
         <div class="static-parts">
           <div class="group-name form-part">
             <div class="input-icon">
@@ -25,6 +25,7 @@
                 type="text"
                 class="group-name-input"
                 placeholder="group name"
+                name="username"
               />
             </div>
           </div>
@@ -37,6 +38,7 @@
                 type="text"
                 class="thing-speak-input"
                 placeholder="thing speak channel"
+                name="channelId"
               />
             </div>
           </div>
@@ -49,6 +51,7 @@
                 type="password"
                 class="password-input"
                 placeholder="password"
+                name="password"
               />
             </div>
             <div class="input-icon eye-icon clickable" onclick="togglePass()">
@@ -66,11 +69,12 @@
                 type="text"
                 class="member-name-input"
                 placeholder="member name"
+                id="member-field"
               />
             </div>
           </div>
         </div>
-      </div>
+      </form>
       <div class="add-member clickable" onclick="addMember()">+</div>
       <div class="signup-button">
         <button class="signup-btn clickable">signup</button>
@@ -78,5 +82,30 @@
       <div class="login">already have an acount ?? <a href="/user/login">login</a></div>
     </div>
   </body>
-  <script src="javascripts/main.js"></script>
+  <script src="/public/javascripts/main.js"></script>
+  <script>
+    function togglePass() {
+      var el = document.querySelector('.eye-icon');
+      console.log(el);
+      el = el.firstElementChild;
+      console.log(el);
+      if (el.style.color == "black") {
+          el.style.color = "darkgrey";
+      } else {
+          el.style.color = "black";
+      }
+      el = document.querySelector(".password-input")
+      if (el.type === "password") {
+          el.type = "text";
+      } else {
+          el.type = "password";
+      }
+  }
+
+  function addMember() {
+      var members = document.querySelector(".dynamic-parts");
+      console.log(members);
+      members.appendChild(clone);
+  }
+</script>
 </html>
